--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -7,17 +7,29 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
     <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
-    <link rel="stylesheet" th:href="@{/assets/css/eventDetails.css}"/>
 </head>
 
 <body>
 <header th:replace="layout :: header"></header>
 
 <main>
+    <h2>Topp vísindamenn:</h2>
+    <div th:each="topUser : ${userService.findAllOrderedByPoints()}">
+        <p th:text="${topUser.username} + ' - ' + ${topUser.points}"></p>
+    </div>
+
+    <h2>Bannlisti:</h2>
+    <div th:each="eventBan : ${eventBanService.findAllBanned()}">
+        <p th:text="${eventBan.user.username}"></p>
+        <a id="removeBan + ${eventBan.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/user/${eventBan.user.id}/removeEventBan|}">Fjarlægja
+            af bannlista</a>
+    </div>
+
+    <h2>Meðlimir Nörd:</h2>
 <!-- For each user item -->
 <div th:each="user : ${user}" class="user-items">
     <div>
-        <h3 th:text="${user.username}"></h3>
+        <p th:text="${user.username}"></p>
     </div>
 
     <div th:switch="${eventBanService.isEventBanned(user)}">
@@ -31,12 +43,7 @@
         </div>
     </div>
 </div>
-<h2>Bannlisti:</h2>
-<div th:each="eventBan : ${eventBanService.findAllBanned()}">
-    <h4 th:text="${eventBan.user.username}"></h4>
-    <a id="removeBan + ${eventBan.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/user/${eventBan.user.id}/removeEventBan|}">Fjarlægja
-        af bannlista</a>
-</div>
+
 
 
 <a th:href="@{/}">Fara á forsíðu</a>
